# NAOCAM

./: .gitignore  .gitmodules  CALIBRATION.YML  CMakeLists.txt  Doxyfile  Makefile  ProyectoFinal.tex  README.md  README.txt  main.cpp  naocam.cpp  naocam.h  qiproject.xml
src/: main.cpp  naocam.cpp  naocam.h
tst/Circle/: Circle.pml  manifest.xml
tst/Circle/behavior_1/: behavior.xar
tst/Lateral/: Lateral.pml  manifest.xml
tst/Lateral/behavior_1/: behavior.xar
tst/Line/: line.pml  manifest.xml
tst/Line/behavior_1/: behavior.xar
tst/ZigZag/: ZigZag.pml  manifest.xml
tst/ZigZag/behavior_1/: behavior.xar
